clerk auth set up and sign in screen WIP

--- a/app.json
+++ b/app.json
@@ -1,5 +1,8 @@
 {
   "expo": {
+    "android": {
+      "softwareKeyboardLayoutMode": "pan"
+     },
     "scheme": "acme",
     "userInterfaceStyle": "automatic",
     "orientation": "default",
